Added slugs to actors/directors/genres/movies/movie_ratings. Added some friendly forwarding in the case of destroying a rating. User can choose a unique chosen_name to use as their user name.

--- a/README.rdoc
+++ b/README.rdoc
@@ -6,11 +6,12 @@ application up and running.
 Things you may want to cover:
 
 * Ruby version
-
+    ruby 2.1.2
 * System dependencies
-
+    uses Postgresql. 
+    user: postgresql
 * Configuration
-
+    set GOOGLE_ID, GOOGLE_SECRET, FACEBOOK_ID, FACEBOOK_SECRET in your environment
 * Database creation
 
 * Database initialization
