--- a/TODO
+++ b/TODO
@@ -18,6 +18,7 @@
    +- with version control from vestal
    - List users who have edited.
 
+-Remember! Style the version control
 - If possible duplicate records found, show. provide suggestions and links.
 - Have users first encounter search for actors/directors/movies. If not found, can add.
         - Search functionality
